import "goby/common/option_extensions.proto";

// required fields will be filled in for you by ApplicationBase
// if you choose not to do so yourself
message Header
{
  //
  // time
  //

  // result of goby::util::as<std::string>(goby_time())
  // e.g. "2002-01-20 23:59:59.000"
  required string time = 10 [(goby.field).dccl.codec="_time",
                             (goby.field).dccl.in_head=true,
                             (goby.field).queue.is_time=true];

  //
  // source
  //
  required string source_platform = 11 [(goby.field).dccl.codec="_platform<->modem_id",
                                        (goby.field).dccl.in_head=true,
                                        (goby.field).queue.is_src=true];
  optional string source_app = 12 [(goby.field).dccl.omit=true];
  
  //
  // destination
  //
  enum PublishDestination { PUBLISH_SELF = 1; PUBLISH_OTHER = 2; PUBLISH_ALL = 3; }
  optional PublishDestination dest_type = 13 [default = PUBLISH_SELF, (goby.field).dccl.in_head=true];
  
  optional string dest_platform = 14 [(goby.field).dccl.codec="_platform<->modem_id",
                                      (goby.field).dccl.in_head=true,
                                      (goby.field).queue.is_dest=true]; // required if dest_type == other

}
