import "goby/common/protobuf/option_extensions.proto";
import "goby/test/acomms/dccl3/header.proto";

message GobyMessage
{
  option (goby.msg).dccl.id = 4;
  option (goby.msg).dccl.max_bytes = 32;

  required string telegram = 1 [(goby.field).dccl.max_length=10]; 
  required Header header = 2;
}

